remove extra margins align button on desktop version fix size img

--- a/src/styles/_features.scss
+++ b/src/styles/_features.scss
@@ -20,6 +20,7 @@
   &__img {
     display: block;
     width: 42vw;
+    height: calc(976px - 296px);
   }
   &__span {
     display: block;
@@ -68,8 +69,9 @@
   .features {
     flex-direction: column;
     justify-content: center;
-    padding: 0 20px;
+    padding: 50px 20px;
     border-radius: 0;
+    height: auto;
     &__box:first-child {
       width: auto;
       height: auto;
@@ -83,6 +85,10 @@
     }
     &__picture {
       margin-bottom: 10px;
+    }
+    &__text {
+      width: 65%;
+      margin-bottom: 25px;
     }
   }
 }
