--- a/src/styles/_greeting.scss
+++ b/src/styles/_greeting.scss
@@ -18,7 +18,7 @@
 }
 @media screen and (max-width: 960px) {
   .greeting {
-    padding: 30px 20px;
+    padding: 50px 20px;
     margin: 0;
     &__title {
       font-size: 35px;
@@ -27,5 +27,6 @@
     &__text {
       font-size: 18px;
     }
+    
   }
 }
