--- a/src/styles/_name-section.scss
+++ b/src/styles/_name-section.scss
@@ -11,3 +11,8 @@
     color: #fff;
   }
 }
+@media (max-width: 960px) {
+  .name-section {
+    text-align: center;
+  }
+}
