--- a/src/styles/_section.scss
+++ b/src/styles/_section.scss
@@ -24,10 +24,10 @@
       padding-left: 0;
     }
     &--testimonials {
-      padding: 30px 0;
+      padding: 50px 0;
     }
     &--vision {
-      padding: 30px 0;
+      padding: 50px 0;
     }
   }
 }
