--- a/src/styles/_wrapper.scss
+++ b/src/styles/_wrapper.scss
@@ -26,10 +26,10 @@
   .wrapper {
     width: 100%;
     &--what-do {
-      padding: 30px 0;
+      padding: 50px 0;
     }
     &--process {
-      padding: 30px 0;
+      padding: 50px 0;
     }
     &--footer {
       padding: 0;
